                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2017-06-29
 * Added get_object() in wing.angular.js to suppliment find_object().

2017-06-25
 * Allow null as a value on a Rest qualifier.
 * Fixed a bug in wing.merge()
 * Added with_credentials flag to wing.angular.js objectListManager and objectManager $http methods.

2017-06-23
 * create() in wing.angular.js objectListManager now provides a reference to the object during on_success

2017-06-22
 * wing.angular.js now supports angular 1.6, by removing the use of .success and .error methods on $http in favor of .then

2017-06-09
 * WebFilteredField no longer puts a restriction on the length of a string.
 * S3Image increased filename size from 60 to 255. 

2017-05-18
 * Added max_items option to result sets so that you can artificially stop pagination after some arbitrary amount, rather than all the records in the database.

2017-03-04
 * Readding the prevention of joined queries on generated relationships.

2017-03-03
 * Removed a wierd query option on objectListManager search() in wing.angular.js.

2017-01-25
 * Don't prevent joined queries from performing a query on generated relationships.

2017-01-11
 * Do session check if session_id is passed to /api/_test

2017-01-02
 * Changed the output of Wing::Rest::Status over a potential security issue.

2016-12-30
 * UriPart role should also have had skip_duplicate turned on by default.

2016-12-28
 * UriPartOnInit role should have had skip_duplicate turned on by default.
 * Show job id in Wingman error message when not found.

2016-11-04
 * _order_by can now be an array.

2016-10-18
 * Backed out change added on 2016-10-14, because the user decided not to use it, and it was causing other problems elsewhere in existing apps.

2016-10-14