@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2017-06-29
  * Added get_object() in wing.angular.js to suppliment find_object().
+ * Added params option to search() and all() in objectListManager in wing.angular.js.
 
 2017-06-25
  * Allow null as a value on a Rest qualifier.
